# Perceptron-Neural-Network

./: .gitignore  README.md  pyproject.toml
data/raw/: fruit.csv  region.csv  vehicle.csv
src/: main.py
src/models/: perceptron_sk.py
tests/: test_perceptron_and.py  test_perceptron_or.py
