[project]
name = "perceptron-neural-network"
version = "0.1.0"
description = "Implementation of a perceptron neural network from scratch"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Natam Leão Ferreira", email = "ferreira.natamleao@gmail.com" }
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]